[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diamond-ppo"
version = "0.1.0"
description = "A lightweight PyTorch PPO implementation for research and experimentation"
readme = "readme.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Alex Goddard"},
]
keywords = [
    "reinforcement-learning",
    "ppo",
    "proximal-policy-optimization",
    "pytorch",
    "gymnasium",
    "deep-learning",
    "machine-learning",
    "rl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=2.0.0",
    "torch>=2.0.0",
    "matplotlib>=3.0.0",
    "plotly>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

demo = [
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "ipython>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/auxeno/diamond-ppo"
Repository = "https://github.com/auxeno/diamond-ppo"
Documentation = "https://github.com/auxeno/diamond-ppo#readme"
"Bug Tracker" = "https://github.com/auxeno/diamond-ppo/issues"

[tool.setuptools]
packages = ["diamond"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=diamond",
    "--cov-report=term-missing",
    "--cov-report=html",
]